<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#ffffff">

    <TextView
        android:id="@+id/signup_login"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/login_signup"
        android:layout_marginLeft="20dp"
        android:textSize="24sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif-black"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/mob_no"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:text="@string/mob_no"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/signup_login"
        android:textSize="12sp"
        android:textStyle="normal"
        app:fontFamily="sans-serif"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_10_digit_mobile_number"
        android:layout_below="@+id/mob_no"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="10sp"
        app:fontFamily="sans-serif"
        />

    <EditText
        android:id="@+id/phone_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/mob_no"
        android:layout_marginTop="40dp"
        android:textIsSelectable="true"
        android:inputType="textNoSuggestions|phone"
        android:maxLength="10"
        app:fontFamily="sans-serif"
        android:textColor="#000000"
        android:textSize="18sp"
        android:focusable="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_no"
        android:layout_margin="20dp"
        android:text="@string/button_name"
        android:id="@+id/login"
        android:background="#ffd800"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:fontFamily="sans-serif"
        android:onClick="continue_button"/>

</RelativeLayout>