<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <TextView
        android:id="@+id/verify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/verify_details"
        android:textSize="24sp"
        android:textStyle="normal"
        android:fontFamily="sans-serif-black"
        android:textColor="#000000"/>
    <TextView
        android:id="@+id/otp_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_info"
        android:layout_marginTop="5dp"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_below="@id/verify_text"
        android:fontFamily="sans-serif"
        />
    <TextView
        android:id="@+id/enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:layout_marginTop="60dp"
        android:textSize="12sp"
        android:textStyle="normal"
        android:layout_below="@id/otp_info"
        android:fontFamily="sans-serif"
        />
    <LinearLayout
        android:id="@+id/layout_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/enter_otp"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/otp_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/otp_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/otp_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/otp_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/otp_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
        <EditText
            android:id="@+id/otp_6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:maxLength="1"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/resend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resend"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="normal"
        android:layout_below="@id/layout_otp"
        android:fontFamily="sans-serif"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:textColor="#4169E1"/>
    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="VERIFY AND PROCEED"
        android:background="#ffd800"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_below="@+id/resend"
        android:clickable="false"
        />
</RelativeLayout>